trying to fix weird firefox layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -572,7 +572,7 @@ footer {
 		z-index: 99999;
 	}
 
-	.left {
+/*	.left {
 		margin: 0 auto;
 		margin: right: 1em;
 		max-width: 500px;
@@ -582,7 +582,7 @@ footer {
 		margin: 0 auto;
 		margin-left: 1em;
 		max-width: 500px;
-	}
+	}*/
 }
 
 
